<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menuscreen">Easy Farmer</string>
    <string name="ham">h</string>
    <string name="bill">Billing</string>
    <string name="order">Orders</string>
    <string name="close">Closing Balance</string>
    <string name="sale">Sales Graph</string>
    <string name="title_activity_createlisting">createlisting</string>
    <string name="title_activity_orders">orders</string>
    <string name="news">News</string>
    <string name="buy">Buy A Product</string>
    <string name="voice">Personal Assistant</string>
    <string name="sell">Sell crop</string>
    <string name="my_activity">My Activity</string>
    <string name="budget">Calculate Budget</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="extrafeature">More</string>
    <string name="predict">Predict Disease</string>

    <string-array name="district_array">
        <item> Bengaluru Urban</item>
        <item>Bengaluru Rural</item>
        <item>Ramanagara</item>
        <item>Shivamogga</item>
        <item>Davangere</item>
        <item> Chitradurga</item>
        <item> Kolar</item>
        <item>Tumakuru</item>
        <item>Chikkaballapura</item>
        <item>Mysuru</item>
        <item>Haasana</item>
        <item>Udupi</item>
        <item>Chamrajanagar</item>
        <item>Dakshina Kannada</item>
        <item>Kodagu</item>
        <item>Mandya</item>
        <item>Chikkamagaluru</item>
        <item> Belagavi</item>
        <item>Vijayapura</item>
        <item>Haveri</item>
        <item>Gadag</item>
        <item>Bagalkot</item>
        <item>Uttara Kannada</item>
        <item>Dharwad</item>
        <item>Ballari</item>
        <item>Bidar</item>
        <item> Koppal</item>
        <item>Yadgir</item>
        <item>Kalaburgi</item>
        <item>Raichur</item>
    </string-array>
    <array name="Croppp">
        <item>Select a crop</item>
        <item>Paddy</item>
        <item>Wheat</item>
        <item>Corn</item>
        <item>Sugarcane</item>
        <item>Pulses</item>

    </array>
    <array name="Gender">
        <item>Select a Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>

    </array>

    <!--
        Used in Action Bar, and in AndroidManifest to tell the device the name of this app.
        It's to keep this short, so your launcher icon isn't displayed with "The greatest Wea"
        or something similar.
   -->
    <string name="app_name">Easy Farmer</string>

    <!--
         By convention, "action" denotes that this String will be used as the label for an Action,
         typically from the action bar.  The ActionBar is limited real estate, so shorter is better.
    -->

    <string name="action_map">Map Location</string>
    <string name="action_share">Share</string>

    <!-- Menu label to fetch updated weather info from the server -->
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Label for the location preference [CHAR LIMIT=30] -->
    <string name="pref_location_label">Location</string>

    <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_location_key" translatable="false">location</string>

    <!-- Default postal code for location preference [CHAR LIMIT=NONE] -->
    <string name="pref_location_default" translatable="false">94043</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <!-- Strings for formatting weather-related data -->

    <!-- Label for the temperature units preference [CHAR LIMIT=30] -->
    <string name="pref_units_label">Temperature Units</string>

    <!-- Label for metric option in temperature unit preference [CHAR LIMIT=25] -->
    <string name="pref_units_label_metric">Metric</string>

    <!-- Label for imperial option in temperature unit preference [CHAR LIMIT=25] -->
    <string name="pref_units_label_imperial">Imperial</string>

    <!-- Key name for temperature unit preference in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_units_key" translatable="false">units</string>

    <!-- Value in SharedPreferences for metric temperature unit option [CHAR LIMIT=NONE] -->
    <string name="pref_units_metric" translatable="false">metric</string>

    <!-- Value in SharedPreferences for imperial temperature unit option [CHAR LIMIT=NONE] -->
    <string name="pref_units_imperial" translatable="false">imperial</string>


    <!-- Language-specific constants -->
    <string name="today">Today</string>

    <!-- For labelling tomorrow's forecast [CHAR LIMIT=15] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format [CHAR LIMIT=NONE] -->
    <string name="format_full_friendly_date"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>

    <!-- Strings for formatting weather-related data -->
    <!-- Temperature format [CHAR LIMIT=5 -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>
    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">sunshine.example.com</string>
    <string name="content_authority">com.example.android.sunshine.app</string>

    <!-- Notification Format -->
    <string name="format_notification">Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g></string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>
    <string name="title_activity_forum">Forums</string>
    <string name="weather">Weather Forecast</string>
    <string name="forum">Forums</string>
    <string name="weathers">Weather Forecast</string>
    <string name="listing">Create Listing</string>
    <string name="Enter_Amount">Enter Amount</string>
    <string name="Labour">Labour</string>

    <string name="Enter_Kilograms">Enter Kilograms</string>
    <string name="Enter_Location">Enter Location</string>
    <string name="Create">CREATE</string>
    <string name="userName">Email</string>
    <string name="password">Password</string>
    <string name="assistant">Click  on  the   Button to  Activate  Personal   Assistant</string>
    <string name="Response">Response</string>
    <string name="navigate">Navigate To Farmer?</string>
    <string name="Name">Name</string>
    <string name="Phone">Phone</string>
    <string name="Email">Email</string>
    <string name="No_news">No News!!</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="crop_not_found">The crop entered is not yet updated!!</string>
    <string name="select">Select a crop which is to be cultivated</string>
    <string name="date">Enter the date of harvesting</string>
    <string name="clickdate">Click To enter date</string>
    <string name="employer">Post Job</string>
    <string name="employee">Search jobs</string>
    <string name="title_activity_main2">Main2Activity</string>

</resources>
