<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:background="@drawable/loginbackground2"

    tools:context=".signup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        android:orientation="vertical">

        <EditText
            android:textColor="#FFFFFF"
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/Name" />

        <EditText
            android:textColor="#FFFFFF"
            android:id="@+id/userPhone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/name"
            android:hint="@string/Phone" />

        <EditText
            android:textColor="#FFFFFF"
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/userPhone"
            android:hint="@string/Email" />

        <EditText
            android:textColor="#FFFFFF"
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="numberPassword"
            android:layout_below="@id/userEmail"
            android:hint="@string/password" />
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </LinearLayout>


    <Button
        android:id="@+id/signButton"
        android:layout_width="wrap_content"

        android:layout_height="50sp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.707" />

</android.support.constraint.ConstraintLayout>